Numeric/decimal datatype overflow on Win32. Fixed bug #20641

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@120175 c90b9560-bf6c-de11-be94-00142212c4b1